--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@types/node": "^24.5.2",
+    "@types/node": "^25.0.3",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "prettier": "^3.6.2",
-    "typescript": "~5.8.3",
+    "typescript": "^5.9.3",
     "vite": "^7.1.7",
     "vue-tsc": "^3.0.7"
   }
