--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yogprs",
   "private": true,
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,21 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.13",
-    "axios": "^1.13.0",
-    "node-fetch": "^3.3.2",
-    "querystring": "^0.2.1",
-    "tailwindcss": "^4.1.13",
-    "vue": "^3.5.21",
-    "vue-router": "^4.5.1"
+    "@tailwindcss/vite": "^4.1.18",
+    "@vueuse/head": "^2.0.0",
+    "gsap": "^3.14.2",
+    "tailwindcss": "^4.1.18",
+    "vue": "^3.5.24"
   },
   "devDependencies": {
-    "@types/node": "^25.0.3",
+    "@iconify/vue": "^5.0.0",
+    "@types/node": "^24.10.9",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.3",
-    "vite": "^7.1.7",
-    "vue-tsc": "^3.0.7"
+    "prettier": "^3.8.1",
+    "typescript": "~5.9.3",
+    "vite": "^7.2.4",
+    "vue-tsc": "^3.1.4"
   }
 }
